不使用jdk Pair使用intellij库的Pair